@startuml

class Book {
    name
    getName()
}
class BookShelf {
    books
    last
    getBookAt()
    appendBook()
    getLength()
    iterator()
}
class BookShelfIterator {
    bookShelf
    index
    hasNext()
    next()
}
note bottom
    <size:10>BookShelfIteratorがBookShelf型の
    <size:10>オブジェクトを持っているという集約関係
end note


interface Aggregate {
    iterator()
}

note top
    <size:10>AgregateクラスとIteratorクラスを
    <size:10>分けることにより複数のIteratorが
    <size:10>扱えるようになる
end note


interface Iterator {
    hasNext()
    next()
}

Aggregate -ri-> Iterator : Creates
Iterator <|.. BookShelfIterator
BookShelfIterator o-le-> BookShelf
BookShelf o--> Book
Aggregate <|.do. BookShelf

note left of Aggregate
    <size:10>Aggregate
end note

note left of BookShelf
    <size:10>ConcreteAggregate
end note

note right of Iterator
    <size:10>Iterator
end note

note right of BookShelfIterator
    <size:10>ConcreteIterator
end note

@enduml